@@ -1,0 +1,20 @@
+#ifndef _SYS_PSET_H
+#define _SYS_PSET_H
+
+/* system call subcodes */
+#define PSET_CREATE             0
+#define PSET_DESTROY            1
+#define PSET_ASSIGN             2
+#define PSET_INFO               3
+#define PSET_BIND               4
+#define PSET_GETLOADAVG         5
+#define PSET_LIST               6
+#define PSET_SETATTR            7
+#define PSET_GETATTR            8
+#define PSET_ASSIGN_FORCED      9
+
+/* attribute bits */
+#define PSET_NOESCAPE   0x0001
+
+
+#endif
