@@ -3,7 +3,6 @@
 
 #include "/usr/include/sys/statvfs.h"
 
-typedef struct statvfs64 statvfs_t;
-typedef struct statvfs statvfs32_t;
+typedef struct statvfs statvfs_t;
 
 #endif
