@@ -1,0 +1,59 @@
+BUILD_DIR = build-2.6.18-128.1.14.0.1.el5
+CC=gcc -g $(BUILD_BITS)
+CPPFLAGS += -I. \
+	-I../common/ctf \
+	-I../uts/common/ \
+	-I../include \
+	-I../libproc/common \
+	-I../libctf \
+	-I../uts/intel \
+	-I../build-2.6.18-128.1.14.0.1.el5 \
+	-DCTF_OLD_VERSIONS $(PTR32)
+CPPFLAGS += -D_ILP32 -D_LONGLONG_TYPE -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64
+
+LIB = ../$(BUILD_DIR)/libdtrace.a
+
+all: $(LIB)
+	@/bin/true
+
+$(LIB): \
+	$(LIB)(drti.o) \
+	$(LIB)(dt_aggregate.o) \
+	$(LIB)(dt_as.o) \
+	$(LIB)(dt_buf.o) \
+	$(LIB)(dt_cc.o) \
+	$(LIB)(dt_cg.o) \
+	$(LIB)(./i386/dt_isadep.o) \
+	$(LIB)(dt_consume.o) \
+	$(LIB)(dt_decl.o) \
+	$(LIB)(dt_dis.o) \
+	$(LIB)(dt_dof.o) \
+	$(LIB)(dt_error.o) \
+	$(LIB)(dt_grammar.o) \
+	$(LIB)(dt_handle.o) \
+	$(LIB)(dt_ident.o) \
+	$(LIB)(dt_inttab.o) \
+	$(LIB)(dt_link.o) \
+	$(LIB)(dt_list.o) \
+	$(LIB)(dt_map.o) \
+	$(LIB)(dt_module.o) \
+	$(LIB)(dt_open.o) \
+	$(LIB)(dt_options.o) \
+	$(LIB)(dt_parser.o) \
+	$(LIB)(dt_pcb.o) \
+	$(LIB)(dt_pid.o) \
+	$(LIB)(dt_pragma.o) \
+	$(LIB)(dt_printf.o) \
+	$(LIB)(dt_proc.o) \
+	$(LIB)(dt_program.o) \
+	$(LIB)(dt_provider.o) \
+	$(LIB)(dt_regset.o) \
+	$(LIB)(dt_string.o) \
+	$(LIB)(dt_strtab.o) \
+	$(LIB)(dt_subr.o) \
+	$(LIB)(dt_work.o) \
+	$(LIB)(dt_xlator.o) \
+
+clean:
+	-rm -f *.o
+	
