@@ -27,7 +27,10 @@
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
+
+#define __USE_ATFILE
 #include <fcntl.h>
+
 #include <errno.h>
 #include "libproc.h"
 
